samples/_failures_safe/1761598194_0a52c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba57cb2e.c: In function ‘main’:
./samples/SAFE/__tmp_ba57cb2e.c:136:20: error: expected ‘)’ at end of input
  136 |     if (entry_count
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_ba57cb2e.c:136:5: error: expected declaration or statement at end of input
  136 |     if (entry_count
      |     ^~
